# fsoft2024_1DC_3

./: README.md
1ª Iteração/Modelo de Dominio/: modelo_dominio.puml
1ª Iteração/UC Clientes/UML/: UC Grente  UC3-Cliente-CarrinhoEncomendaUML.puml
1ª Iteração/UC Funcionário/: Employee UC Specifications.docx  UC diagram Funcionário.drawio
1ª Iteração/UC Gerente/: Gerente.drawio  gerente uc spe.docx
2ª Iteração/Class Diagram/: ModelClassDiagram.drawio  codeOrganization.drawio  controllersClassDiagram.drawio  exceptionsClassDiagram.drawio  logicalArchitecture.drawio  physicalArchitecture.drawio  viewClassDiagram.drawio
2ª Iteração/UC Cliente/Diagramas/: UC1-Cliente-IniciarSessaoUML.puml  UC2-Cliente-SelecionarProdutoUML.puml  UC3-Cliente-CarrinhoEncomendaUML.puml  UC4-Cliente-VerCarrinhoUML.puml  UC5-Cliente-EliminarProdCarrinhoUML.puml  UC6-MostraEncomendasUML.puml  UC7-Cliente_FechaSessaoUML.puml
2ª Iteração/UC Funcionário/: UC Funcionário 1 - Login.drawio
2ª Iteração/UC Funcionário/Diagrama/: UC Funcionário 2 - Logout.drawio  UC Funcionário 4 - View Products.drawio  UC Funcionário 5 - Edit Product.drawio  UC Funcionário 7 - View Clients.drawio
2ª Iteração/UC Funcionário/Diagramas/: UC Funcionário 3 - Create Product.drawio  UC Funcionário 5 - Edit Product.drawio  UC Funcionário 6 - Delete Product.drawio  UC Funcionário 8 - View Client Orders.drawio
2ª Iteração/UC Gerente/Diagramas/: UCManager2LogOut.drawio  UCManager3VerFuncionarios.drawio  UCManager4AdicionarFuncionarios.drawio  UCManager5EditarFuncionarios.drawio  UCManager6RemoverFuncionarios.drawio  UCManagerLogin.drawio
2ª Iteração/UIDiagrams/: UI-Client.drawio  aa.puml
2ª Iteração/UIdiagrams/: UI funcionario.drawio  UI manager.drawio
3ª Iteração/: fsoft2024_1dc_3_TR3.docx
FirstProject/: CMakeLists.txt  UC2-Cliente-SelecionarProdutoUML.puml  UC3-Cliente-CarrinhoEncomendaUML.puml  UC4-Cliente-VerCarrinhoUML.puml
FirstProject/UC Clientes/: UC1-Cliente-IniciarSessaoUML.puml  UC2-Cliente-SelecionarProdutoUML.puml  UC4-Cliente-VerCarrinhoUML.puml
FirstProject/UC Clientes/UML/: UC6-Cliente-MostraEncomendaUML.puml  UC7-Cliente-FechaSessaoUML.puml
FirstProject/headers/: factorial.h  pl2.h  pl3.h
FirstProject/sources/: factorial.cpp  pl2.cpp  pl3.cpp
Modelo de Dominio/: UC-Cliente-GeralUML.puml  modelo_dominio.puml
UC Clientes/: Cliente UC spec.docx  UC diagram Cliente.drawio  UC diagram-Cliente.drawio
UC Clientes/UML/: UC1-Cliente-IniciarSessaoUML.puml  UC2-Cliente-SelecionarProdutoUML.puml  UC5-Cliente-EliminarProdCarrinhoUML.puml
fsoft2024_1dc_3/: CMakeLists.txt  main.cpp
fsoft2024_1dc_3/data/: mockClients.csv  mockProducts.csv
fsoft2024_1dc_3/exception/headers/: InvalidDataException.h
fsoft2024_1dc_3/exception/sources/: InvalidDataException.cpp
fsoft2024_1dc_3/headers/controllers/: Controller.h
fsoft2024_1dc_3/headers/model/: Cart.h  Client.h  ClientList.h  ClientOrder.h  ClientOrderList.h  Cliente.h  CompoStore.h  Date.h  Login.h  Manager.h  Order.h  Product.h  ProductList.h  Store.h
fsoft2024_1dc_3/headers/views/: CartView.h  ClientOrderView.h  ClientView.h  ProductView.h  Utils.h  View.h
fsoft2024_1dc_3/mock/: MockData.cpp  MockData.h
fsoft2024_1dc_3/sources/controllers/: Controller.cpp
fsoft2024_1dc_3/sources/model/: Cart.cpp  Client.cpp  ClientList.cpp  ClientOrder.cpp  ClientOrderList.cpp  Cliente.cpp  CompoStore.cpp  Date.cpp  Login.cpp  Manager.cpp  Order.cpp  Product.cpp  ProductList.cpp  Store.cpp
fsoft2024_1dc_3/sources/views/: CartView.cpp  ClientOrderView.cpp  ClientView.cpp  ProductView.cpp  Utils.cpp  View.cpp
